# claude-friends-templates

./: .clauderules  .clauderules_ja  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  ARCHITECTURE.md  ARCHITECTURE_ja.md  AUTHORS.md  BEST_PRACTICES.md  BEST_PRACTICES_ja.md  CHANGELOG.md  CHANGELOG_ja.md  CLAUDE.md  CLAUDE_ja.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  DOCUMENT_STRUCTURE.md  DOCUMENT_STRUCTURE_ja.md  GETTING_STARTED.md  GETTING_STARTED_ja.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_GUIDE_ja.md  README.md  README_TEMPLATE.md  README_TEMPLATE_ja.md  README_ja.md  SAMPLE_PROJECTS.md  SAMPLE_PROJECTS_ja.md  SECURITY.md  SECURITY_ja.md  phase2-release-test.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+1 more)
.claude/: ARCHITECTURE.md  AUTOMATIC-UPDATE-SYSTEM.md  BEST_PRACTICES.md  MEMO_PATH_RULE.md  MIGRATION_GUIDE.md  README.md  README_ja.md  SECURITY-AUTOMATION.md  __init__.py  agent-log-integration.md  ai-logger-README.md  ai-logger-README_ja.md  api-docs-config.json  claude-friends-guide.md  claude-friends-guide_ja.md  hooks-README.md  hooks-README_ja.md  hooks.yaml  lifecycle-config.json.example  monitoring-config.json  quality-config.json  refactoring-config.json  security-README.md  security-README_ja.md  security-config.json  security-report.md  settings-full.json  settings-minimal.json  settings-phase2.json  settings.json  specialists.yaml  tdd_checker_config.json  test-structured-logging.sh  vibe-logger-integration.md
.claude/.claude/: security-report.md
.claude/agents/: README.md  README_ja.md  active.json  active.md  first.md  security-auditor.md  sync-specialist.md  test-writer.md
.claude/archive/: README.md
.claude/builder/: handover.md  identity.md  index.md  notes.md  tdd-cycle.md
.claude/commands/: adr-create.md  agent-builder.md  agent-first.md  agent-planner.md  daily.md  focus.md  project-commands.md  tdd-commands.md
.claude/core/: current.md
.claude/debug/: latest.md
.claude/docs/: handover-lifecycle-guide.md
.claude/guidelines/: ai-friendly-development.md  ai-friendly-development_ja.md  development.md  development_ja.md  git-workflow.md  git-workflow_ja.md  testing-quality.md  testing-quality_ja.md
.claude/hooks/: README.md  README_ja.md  agent-switch.sh
.claude/patches/: hook-common-security.patch  security-patch-20250915.sh
.claude/planner/: handover.md  identity.md  index.md  notes.md
.claude/schemas/: settings-phase2.schema.json
.claude/scripts/: NOTES-MANAGEMENT-README.md  __init__.py  activity-logger-refactored.sh  activity-logger.sh  agent-switch-hook.sh  agent-switch.sh  ai-logger.sh  ai_logger.py  analyze-ai-logs.py  api-docs-generator.py  auto-format.sh  builder-startup.sh  deny-check.sh  deploy.py  design-drift-detector.py  error_pattern_learning.py  handover-generator-optimized.py  handover-generator.py  handover-lifecycle.sh  input-validator.py  log_agent_event.py  log_analysis_tool.py  memory-update.sh  notes-check-hook.sh  notes-maintenance.sh  planner-startup.sh  python312_features.py  quality-check.py  quality-metrics.py  quality-pre-commit.sh  refactoring-analyzer.py  rollback-phase1.sh  rotate-notes.sh  rotation-config.sh  run-coverage.sh  sbom-generator.py  security-audit.py  security-manager.py  security-pre-commit.sh  session-complete-enhanced.sh  (+15 more)
.claude/security/: IMPLEMENTATION_REPORT.md  SECURITY_FIXES_REPORT.md  dashboard.md  sbom.json
.claude/shared/: ai-friendly-comments.md  constraints.md  design-sync.md  handover-interrupt-template.md  next-step-guide.md  phase3-review-checklist.md  phase3-review-report.md  quality-gates.md  refactoring-scheduler.md  task-status.md  tdd-settings.md
.claude/states/: checkpoint_ff2b68b3-0c7a-48cb-b492-ff1789683976.json  sync_3b31e0a8-7a25-4a50-893a-4f9ae15c2265.json  sync_9d30ebb4-707a-40ae-ac92-a25a81a4f44e.json
.claude/sync-specialist/: README.md  ai-logger-integration.sh  config.json  enhanced-sync-monitor.sh  (+8 more)
.github/: pull_request_template.md
docs/: GETTING_STARTED.md  GETTING_STARTED_ja.md  HOOK_SPECIFICATION.md  PHASE2_CONFIGURATION_GUIDE.md  QUICKSTART_MEDIA.md  TROUBLESHOOTING_GUIDE.md  development-rules.md  development-rules_ja.md  phase2-operations-guide.md  quality-metrics.md  quality-metrics_ja.md
examples/: README.md
memo/: .gitignore  20250725_comment_idea.md  gitignore-recommendation.md  gradual-adoption-guide.md  gradual-adoption-guide_ja.md  handover-fallback.md  handover.md  hooks-optimization-plan.md  hooks-system-research.md  security-enhancement-report-2025.md  sync-error.md  tdd-progress-tracker.md  tdd_analysis_fixes.md  tdd_fixes_summary.md  tdd_technical_fixes.md  zero-to-memory-bank.md  zero-to-memory-bank_ja.md  軽量レビュー結果_20250915.md
src/: user_service.ts
(+209 files in other folders)
